--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Collage</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://use.fontawesome.com/e996786236.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+   <section>
+   	   <div class="container">
+   	   	  <div class="row">
+   	   	  	  <div class="col-ms-12 col-xs-12 text-center">
+   	   	  	  	  <h1>Instagram</h1>
+   	   	  	  	  <form action="">
+   	   	  	  	  	  <div class="form-group">
+   	   	  	  	  	  	  <label for="mail"></label>
+   	   	  	  	  	  	  <input type="email" class="form-control" id="mail" placeholder="Email">
+   	   	  	  	  	  </div>
+   	   	  	  	  	  <div class="form-group">
+   	   	  	  	  	  	  <label for="pass"></label>
+   	   	  	  	  	  	  <input type="password" class="form-control" id="pass" placeholder="Contraseña">
+   	   	  	  	  	  </div>
+   	   	  	  	  	  <button type="button" class="btn">Iniciar sesión</button>
+   	   	  	  	  	  <p>¿Has olvidado tu información de inicio se sesión?<a href="#"> Obten ayuda.</a></p>
+   	   	  	  	  </form>
+   	   	  	  	  <hr class="circulo">
+   	   	  	  	  <i class="fa fa-facebook-square" aria-hidden="true"></i>
+   	   	  	  	  <span>Inicia sesión con Facebook</span>
+   	   	  	  </div>
+   	   	  </div>
+   	   </div>
+   </section>
+   <footer class="text-center">
+   	  <p>¿No tienes una cuenta?<a href="#"> Registrate.</a></p>
+   </footer>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
  <script src="assets/js/main.js"></script>
 </body>
 </html>
