--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
 	<meta charset="UTF-8">
 	<title>Collage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <script src="https://use.fontawesome.com/e996786236.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+   <section>
+   	    <div class="container cont1">
+   	   	  	<ul class="nav nav-pills">
+   	   	  	  	<li><a href="#">Idioma:</a></li>
+   	   	  	    <li class="dropdown"><a href="#" class=" dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+   	   	  	  	  	 	 Español(españa)
+   	   	  	  	    <span class="caret"></span>
+   	   	  	  	    </a>
+   	   	  	  	   <ul class="dropdown-menu">
+   	   	  	  	  	  <li><a href="#">Gatuno(Gatito)</a></li>
+   	   	  	  	  	  <li><a href="#">Perruno(Perrito)</a></li>
+   	   	  	  	  	  <li><a href="#">Osuno(Oso)</a></li>
+   	   	  	  	   </ul>
+   	   	  	   </li>
+   	   	  	</ul>	 
+   	   </div>
+   </section>
    <section>
    	   <div class="container">
    	   	  <div class="row">
@@ -23,10 +41,11 @@
    	   	  	  	  	  	  <label for="pass"></label>
    	   	  	  	  	  	  <input type="password" class="form-control" id="pass" placeholder="Contraseña">
    	   	  	  	  	  </div>
-   	   	  	  	  	  <button type="button" class="btn">Iniciar sesión</button>
+   	   	  	  	  	  <button type="submit" class="btn" onclick="validar();">Iniciar sesión</button>
+   	   	  	  	  	  <div id="validacion"></div>
    	   	  	  	  	  <p>¿Has olvidado tu información de inicio se sesión?<a href="#"> Obten ayuda.</a></p>
    	   	  	  	  </form>
-   	   	  	  	  <hr class="circulo">
+   	   	  	  	  <hr>
    	   	  	  	  <i class="fa fa-facebook-square" aria-hidden="true"></i>
    	   	  	  	  <span>Inicia sesión con Facebook</span>
    	   	  	  </div>
@@ -34,7 +53,13 @@
    	   </div>
    </section>
    <footer class="text-center">
-   	  <p>¿No tienes una cuenta?<a href="#"> Registrate.</a></p>
+      <div class="container">
+      	 <div class="row">
+      	 	 <div class="col-ms-12 col-xs-12">
+      	 	 	<p>¿No tienes una cuenta?<a href="#"> Registrate.</a></p>
+      	 	 </div>
+      	 </div>
+      </div>
    </footer>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>  
